--- a/README
+++ b/README
@@ -8,4 +8,4 @@ http://www.percona.com/software/percona-server/
 
 Documentation: http://www.percona.com/doc/percona-server/5.6
 
-Launchpad (bugs, milestones, branches): http://launchpad.net/percona-server
+GitHub (branches): https://github.com/percona/percona-xtradb-cluster
